One product title block.

--- a/templates/templates/taxonomy-sc_collection.html
+++ b/templates/templates/taxonomy-sc_collection.html
@@ -30,7 +30,7 @@
 	<div class="wp-block-group">
 		<!-- wp:surecart/product-image {"style":{"border":{"radius":"6px"},"spacing":{"margin":{"bottom":"16px"}}}} /-->
 
-		<!-- wp:surecart/product-list-title {"level":0,"style":{"typography":{"fontWeight":"400","fontSize":"14px","lineHeight":"1.2"},"spacing":{"margin":{"bottom":"10px"}},"color":{"text":"#374151"}}} /-->
+		<!-- wp:surecart/product-title {"level":0,"style":{"typography":{"fontWeight":"400","fontSize":"14px","lineHeight":"1.2"},"spacing":{"margin":{"bottom":"10px"}},"color":{"text":"#374151"}}} /-->
 
 		<!-- wp:surecart/product-list-price {"style":{"color":{"text":"#111827"},"typography":{"fontSize":"18px","fontWeight":"500"}}} /-->
 	</div>
