--- a/templates/parts/product-collection-part.html
+++ b/templates/parts/product-collection-part.html
@@ -31,7 +31,7 @@
 	<!-- wp:surecart/product-template {"style":{"spacing":{"blockGap":"var:preset|spacing|30"}},"layout":{"type":"grid","columnCount":3}} -->
 	<!-- wp:surecart/product-image {"style":{"border":{"radius":"10px"},"spacing":{"margin":{"top":"0px","bottom":"20px"}}}} /-->
 
-	<!-- wp:surecart/product-list-title {"level":2,"style":{"typography":{"fontSize":"1.35em","fontStyle":"normal","fontWeight":"600"},"spacing":{"margin":{"top":"0px","bottom":"10px"}}}} /-->
+	<!-- wp:surecart/product-title {"level":2,"style":{"typography":{"fontSize":"1.35em","fontStyle":"normal","fontWeight":"600"},"spacing":{"margin":{"top":"0px","bottom":"10px"}}}} /-->
 
 	<!-- wp:group {"style":{"spacing":{"blockGap":"0.5em"}},"layout":{"type":"flex","flexWrap":"nowrap"}} -->
 	<div class="wp-block-group">
