--- a/templates/templates/taxonomy-sc_collection.html
+++ b/templates/templates/taxonomy-sc_collection.html
@@ -1,14 +1,16 @@
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
+
 <!-- wp:group {"align":"wide","style":{"spacing":{"blockGap":"40px","margin":{"top":"40px","bottom":"40px"}}},"layout":{"type":"constrained"}} -->
 <div class="wp-block-group alignwide" style="margin-top:40px;margin-bottom:40px">
 	<!-- wp:group {"align":"wide","style":{"spacing":{"blockGap":"1em"}},"layout":{"type":"constrained"}} -->
 	<div class="wp-block-group alignwide">
 		<!-- wp:query-title {"type":"archive","level":2,"showPrefix":false,"align":"wide"} /-->
+
 		<!-- wp:term-description {"align":"wide"} /-->
 	</div>
 	<!-- /wp:group -->
 
-	<!-- wp:surecart/product-list {"limit":10} -->
+	<!-- wp:surecart/product-list {"limit":10,"align":"wide"} -->
 	<!-- wp:group {"style":{"spacing":{"margin":{"bottom":"10px"}}},"layout":{"type":"flex","justifyContent":"space-between"}} -->
 	<div class="wp-block-group" style="margin-bottom:10px">
 		<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"}} -->
@@ -19,10 +21,6 @@
 		<div class="wp-block-group"><!-- wp:surecart/product-list-search /--></div>
 		<!-- /wp:group -->
 	</div>
-	<!-- /wp:group -->
-
-	<!-- wp:group {"style":{"spacing":{"margin":{"bottom":"10px"}}},"layout":{"type":"flex","flexWrap":"nowrap"}} -->
-	<div class="wp-block-group" style="margin-bottom:10px"></div>
 	<!-- /wp:group -->
 
 	<!-- wp:surecart/product-template {"layout":{"type":"grid","columnCount":4}} -->
@@ -37,7 +35,7 @@
 	<!-- /wp:group -->
 	<!-- /wp:surecart/product-template -->
 
-	<!-- wp:surecart/product-pagination -->
+	<!-- wp:surecart/product-pagination {"paginationArrow":"arrow","layout":{"type":"flex","justifyContent":"space-between"}} -->
 	<!-- wp:surecart/product-pagination-previous /-->
 
 	<!-- wp:surecart/product-pagination-numbers /-->
