Fix invalid markup

--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -1,6 +1,6 @@
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
-<!-- wp:group {"layout":{"type":"default"},"layout":{"type":"constrained"}} -->
+<!-- wp:group {"layout":{"type":"constrained"}} -->
 <div class="wp-block-group"><!-- wp:surecart/product-page {"align":"wide"} -->
 	<!-- wp:columns {"style":{"spacing":{"blockGap":{"top":"30px","left":"60px"}}}} -->
 	<div class="wp-block-columns"><!-- wp:column {"width":"50%"} -->
@@ -8,10 +8,10 @@
 		<!-- /wp:column -->
 
 		<!-- wp:column {"width":"50%"} -->
-		<div class="wp-block-column" style="flex-basis:50%">
-			<!-- wp:surecart/product-collection-tags {"count":1} -->
+		<div class="wp-block-column" style="flex-basis:50%"><!-- wp:surecart/product-collection-tags -->
 			<!-- wp:surecart/product-collection-tag /-->
 			<!-- /wp:surecart/product-collection-tags -->
+
 			<!-- wp:surecart/product-title /-->
 
 			<!-- wp:group {"style":{"spacing":{"blockGap":"0"}}} -->
@@ -22,7 +22,7 @@
 
 					<!-- wp:surecart/product-selected-price-amount {"style":{"typography":{"fontSize":"24px"}}} /-->
 
-					<!-- wp:surecart/product-sale-badge {"text":"Sale","style":{"border":{"radius":"100px"},"typography":{"fontSize":"12px"},"layout":{"selfStretch":"fit","flexSize":null},"elements":{"link":{"color":{"text":"var:preset|color|white"}}}},"textColor":"white"} /-->
+					<!-- wp:surecart/product-sale-badge {"style":{"border":{"radius":"100px"},"typography":{"fontSize":"12px"},"layout":{"selfStretch":"fit","flexSize":null},"elements":{"link":{"color":{"text":"var:preset|color|white"}}}},"textColor":"white"} /-->
 				</div>
 				<!-- /wp:group -->
 
@@ -45,45 +45,40 @@
 			<!-- /wp:surecart/product-variant-pills -->
 
 			<!-- wp:surecart/product-price-choices-v2 -->
-			<!-- wp:surecart/product-price-choices-template {"style":{"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"},"blockGap":"var:preset|spacing|20"}},"layout":{"type":"grid","columnCount":2,"justifyContent":"stretch","orientation":"vertical","flexWrap":"nowrap","verticalAlignment":"center"}} -->
-			<!-- wp:surecart/product-price-choice-template {"layout":{"type":"flex","justifyContent":"left","flexWrap":"nowrap","orientation":"vertical"}} -->
+			<!-- wp:surecart/product-price-choices-template {"style":{"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"},"blockGap":"10px"}},"layout":{"type":"flex","columnCount":2,"justifyContent":"left","orientation":"vertical","flexWrap":"nowrap","verticalAlignment":"center"}} -->
+			<!-- wp:surecart/product-price-choice-template {"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"nowrap","orientation":"horizontal"}} -->
 			<!-- wp:surecart/price-name /-->
 
-			<!-- wp:group
-				{"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right","flexWrap":"wrap"}}
-				-->
+			<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right","flexWrap":"nowrap"}} -->
 			<div class="wp-block-group">
-				<!-- wp:surecart/price-amount {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}}} /-->
+				<!-- wp:surecart/price-amount {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-3"}}},"typography":{"fontStyle":"normal","fontWeight":"700"}},"textColor":"accent-3"} /-->
 
-				<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"}  /-->
-				<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right"}} -->
-				<div class="wp-block-group">
-					<!-- wp:surecart/price-amount {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-3"}}},"typography":{"fontStyle":"normal","fontWeight":"700"}},"textColor":"accent-3"} /-->
+				<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
 
-					<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
-
-					<!-- wp:surecart/price-setup-fee {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
-				</div>
-				<!-- /wp:group -->
-				<!-- /wp:surecart/product-price-choice-template -->
-				<!-- /wp:surecart/product-price-choices-template -->
-				<!-- /wp:surecart/product-price-choices-v2 -->
-
-				<!-- wp:surecart/product-quantity /-->
-				<!-- wp:surecart/product-selected-price-ad-hoc-amount /-->
-				<!-- wp:surecart/product-buy-buttons -->
-				<div class="wp-block-surecart-product-buy-buttons wp-block-buttons sc-block-buttons is-layout-flex">
-					<!-- wp:surecart/product-buy-button {"add_to_cart":true,"text":"Add To Cart"} /-->
-
-					<!-- wp:surecart/product-buy-button {"text":"Buy Now","style":"outline"} /-->
-				</div>
-				<!-- /wp:surecart/product-buy-buttons -->
+				<!-- wp:surecart/price-setup-fee {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
 			</div>
-			<!-- /wp:column -->
-		</div>
-		<!-- /wp:columns -->
-		<!-- /wp:surecart/product-page -->
-	</div>
-	<!-- /wp:group -->
+			<!-- /wp:group -->
+			<!-- /wp:surecart/product-price-choice-template -->
+			<!-- /wp:surecart/product-price-choices-template -->
 
-	<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
+			<!-- wp:surecart/product-quantity /-->
+
+			<!-- wp:surecart/product-selected-price-ad-hoc-amount /-->
+
+			<!-- wp:surecart/product-buy-buttons -->
+			<div class="wp-block-surecart-product-buy-buttons wp-block-buttons sc-block-buttons is-layout-flex">
+				<!-- wp:surecart/product-buy-button {"add_to_cart":true,"text":"Add To Cart"} /-->
+
+				<!-- wp:surecart/product-buy-button {"text":"Buy Now"} /-->
+			</div>
+			<!-- /wp:surecart/product-buy-buttons -->
+			<!-- /wp:surecart/product-price-choices-v2 -->
+		</div>
+		<!-- /wp:column -->
+	</div>
+	<!-- /wp:columns -->
+	<!-- /wp:surecart/product-page -->
+</div>
+<!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
