--- a/packages/blocks-next/src/blocks/product-collection-tags/style.scss
+++ b/packages/blocks-next/src/blocks/product-collection-tags/style.scss
@@ -1,9 +1,8 @@
-.wp-block-surecart-product-collection-tags {
+ul.wp-block-surecart-product-collection-tags {
 	gap: 3px;
 	width: 100%; // prevent collapsing during loading.
 	list-style: none;
-	margin-bottom: 0;
-	margin-top: 0;
+	margin: 0;
 	max-width: 100%;
 	padding: 0;
 }
