Changed cart block name and title from cart-v2 to slide-out-cart

--- a/templates/parts/cart.html
+++ b/templates/parts/cart.html
@@ -1,8 +1,8 @@
-<!-- wp:surecart/cart-v2 {"layout":{"type":"default"}} -->
-<!-- wp:surecart/cart-header-v2 {"text":"Review Your Cart"} /-->
-<!-- wp:surecart/cart-items-v2 /-->
-<!-- wp:surecart/cart-coupon-v2 /-->
-<!-- wp:surecart/cart-subtotal-v2 /-->
-<!-- wp:surecart/cart-bump-line-item-v2 /-->
-<!-- wp:surecart/cart-submit-v2 /-->
-<!-- /wp:surecart/cart-v2 -->
+<!-- wp:surecart/slide-out-cart {"layout":{"type":"default"}} -->
+<!-- wp:surecart/slide-out-cart-header {"text":"Review Your Cart"} /-->
+<!-- wp:surecart/slide-out-cart-items /-->
+<!-- wp:surecart/slide-out-cart-coupon /-->
+<!-- wp:surecart/slide-out-cart-subtotal /-->
+<!-- wp:surecart/slide-out-cart-bump-line-item /-->
+<!-- wp:surecart/slide-out-cart-submit /-->
+<!-- /wp:surecart/slide-out-cart -->
