--- a/packages/blocks-next/src/blocks/cart-header/style.scss
+++ b/packages/blocks-next/src/blocks/cart-header/style.scss
@@ -27,12 +27,9 @@
 		padding: 0 var(--sc-spacing-small);
 	}
 
-	&__close {
+	&__close, &__close svg {
 		cursor: pointer;
-
-		svg {
-			width: 20px;
-			height: 20px;
-		}
+		width: 16px;
+		height: 16px;
 	}
 }
