--- a/packages/blocks-next/src/blocks/cart-menu-button/editor.scss
+++ b/packages/blocks-next/src/blocks/cart-menu-button/editor.scss
@@ -1,3 +1,5 @@
-.sc-choices {
-	grid-template-columns: repeat(var(--columns, 2), 60px) !important;
+.wp-block-surecart-cart-menu-icon-v2 {
+	.sc-choices {
+		grid-template-columns: repeat(var(--columns, 2), 60px) !important;
+	}
 }
