Fix slide out cart styling

--- a/packages/blocks-next/src/blocks/product-pagination-numbers/style.scss
+++ b/packages/blocks-next/src/blocks/product-pagination-numbers/style.scss
@@ -6,6 +6,7 @@
 		line-height: 1;
 		gap: var(--sc-spacing-xx-small);
 		text-decoration: none;
+		color: inherit;
 
 		&[disabled] {
 			pointer-events: none;
