--- a/packages/blocks-next/src/blocks/cart-header/style.scss
+++ b/packages/blocks-next/src/blocks/cart-header/style.scss
@@ -27,9 +27,10 @@
 		padding: 0 var(--sc-spacing-small);
 	}
 
-	&__close, &__close svg {
+	&__close,
+	&__close svg {
 		cursor: pointer;
-		width: 16px;
-		height: 16px;
+		width: 20px;
+		height: 20px;
 	}
 }
