--- a/packages/blocks-next/src/blocks/product-pagination-next/style.scss
+++ b/packages/blocks-next/src/blocks/product-pagination-next/style.scss
@@ -3,6 +3,7 @@
 	align-items: center;
 	gap: var(--sc-spacing-xx-small);
 	text-decoration: none !important;
+	color: inherit;
 
 	&__icon {
 		width: 1em;
