--- a/packages/blocks-next/src/blocks/cart/style.scss
+++ b/packages/blocks-next/src/blocks/cart/style.scss
@@ -5,6 +5,7 @@
 	margin: auto;
 	border: var(--sc-drawer-border);
 	box-shadow: 0 1px 2px #0d131e1a;
+	font-size: 16px;
 
 	.sc-alert {
 		&__icon svg {
