--- a/packages/blocks-next/src/styles/product-line-item.scss
+++ b/packages/blocks-next/src/styles/product-line-item.scss
@@ -149,7 +149,7 @@
 		line-height: var(--sc-line-height-dense);
 	}
 
-	&__price__description {
+	&__price-description {
 		font-size: var(--sc-font-size-small);
 		line-height: var(--sc-line-height-dense);
 		color: var(--sc-input-label-color);
