--- a/templates/parts/product-collection-part.html
+++ b/templates/parts/product-collection-part.html
@@ -28,7 +28,7 @@
 	<!-- wp:surecart/product-list-filter-tag /-->
 	<!-- /wp:surecart/product-list-filter-tags -->
 
-	<!-- wp:surecart/product-template {"style":{"spacing":{"blockGap":"var:preset|spacing|30"}},"layout":{"type":"grid","columnCount":4}} -->
+	<!-- wp:surecart/product-template {"style":{"spacing":{"blockGap":"30px"}},"layout":{"type":"grid","columnCount":4}} -->
 	<!-- wp:group {"style":{"spacing":{"blockGap":"5px"}},"layout":{"type":"constrained"}} -->
 	<div class="wp-block-group">
 		<!-- wp:surecart/product-image {"style":{"spacing":{"margin":{"bottom":"15px"}},"border":{"radius":"6px"}}} /-->
