--- a/packages/blocks-next/src/blocks/cart/style.scss
+++ b/packages/blocks-next/src/blocks/cart/style.scss
@@ -19,3 +19,9 @@
 		}
 	}
 }
+
+// Stop the body from scrolling when the cart drawer is open.
+html:has(dialog.sc-drawer[open]) {
+	overflow: hidden;
+	scrollbar-gutter: stable;
+}
