--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -46,44 +46,37 @@
 
 			<!-- wp:surecart/product-price-chooser -->
 			<!-- wp:surecart/product-price-choices-template {"style":{"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"},"blockGap":"var:preset|spacing|20"}},"layout":{"type":"grid","columnCount":2,"justifyContent":"stretch","orientation":"vertical","flexWrap":"nowrap","verticalAlignment":"center"}} -->
-			<!-- wp:surecart/product-price-choice-template {"layout":{"type":"flex","justifyContent":"left","flexWrap":"nowrap","orientation":"vertical"}} -->
+			<!-- wp:surecart/product-price-choice-template {"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"nowrap","orientation":"horizontal"}} -->
 			<!-- wp:surecart/price-name /-->
 
-			<!-- wp:group
-				{"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right","flexWrap":"wrap"}}
-				-->
+			<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right"}} -->
 			<div class="wp-block-group">
-				<!-- wp:surecart/price-amount {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}}} /-->
+				<!-- wp:surecart/price-amount {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-3"}}},"typography":{"fontStyle":"normal","fontWeight":"700"}},"textColor":"accent-3"} /-->
 
-				<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"}  /-->
-				<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right"}} -->
-				<div class="wp-block-group">
-					<!-- wp:surecart/price-amount {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-3"}}},"typography":{"fontStyle":"normal","fontWeight":"700"}},"textColor":"accent-3"} /-->
+				<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
 
-					<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
-
-					<!-- wp:surecart/price-setup-fee {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
-				</div>
-				<!-- /wp:group -->
-				<!-- /wp:surecart/product-price-choice-template -->
-				<!-- /wp:surecart/product-price-choices-template -->
-				<!-- /wp:surecart/product-price-chooser -->
-
-				<!-- wp:surecart/product-quantity /-->
-				<!-- wp:surecart/product-selected-price-ad-hoc-amount /-->
-				<!-- wp:surecart/product-buy-buttons -->
-				<div class="wp-block-surecart-product-buy-buttons wp-block-buttons sc-block-buttons is-layout-flex">
-					<!-- wp:surecart/product-buy-button {"add_to_cart":true,"text":"Add To Cart"} /-->
-
-					<!-- wp:surecart/product-buy-button {"text":"Buy Now","style":"outline"} /-->
-				</div>
-				<!-- /wp:surecart/product-buy-buttons -->
+				<!-- wp:surecart/price-setup-fee {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
 			</div>
-			<!-- /wp:column -->
-		</div>
-		<!-- /wp:columns -->
-		<!-- /wp:surecart/product-page -->
-	</div>
-	<!-- /wp:group -->
+			<!-- /wp:group -->
+			<!-- /wp:surecart/product-price-choice-template -->
+			<!-- /wp:surecart/product-price-choices-template -->
+			<!-- /wp:surecart/product-price-chooser -->
 
-	<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
+			<!-- wp:surecart/product-quantity /-->
+			<!-- wp:surecart/product-selected-price-ad-hoc-amount /-->
+			<!-- wp:surecart/product-buy-buttons -->
+			<div class="wp-block-surecart-product-buy-buttons wp-block-buttons sc-block-buttons is-layout-flex">
+				<!-- wp:surecart/product-buy-button {"add_to_cart":true,"text":"Add To Cart"} /-->
+
+				<!-- wp:surecart/product-buy-button {"text":"Buy Now","style":"outline"} /-->
+			</div>
+			<!-- /wp:surecart/product-buy-buttons -->
+		</div>
+		<!-- /wp:column -->
+	</div>
+	<!-- /wp:columns -->
+	<!-- /wp:surecart/product-page -->
+</div>
+<!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
