Fixed SUR-1304 - Button text and Text color issues on the Cart Coupon

--- a/packages/blocks-next/src/blocks/cart-coupon/style.scss
+++ b/packages/blocks-next/src/blocks/cart-coupon/style.scss
@@ -35,4 +35,11 @@
 			display: none;
 		}
 	}
+
+	.sc-coupon-input-label {
+		margin-bottom: var(--sc-input-label-margin);
+		font-style: normal;
+		font-size: var(--sc-input-label-font-size-medium);
+		font-weight: var(--sc-font-weight-normal);
+	}
 }
