--- a/packages/blocks-next/src/styles/coupon-form.scss
+++ b/packages/blocks-next/src/styles/coupon-form.scss
@@ -105,6 +105,7 @@
 			button {
 				background: transparent;
 				border: 0;
+				box-shadow: none;
 				font-size: var(--sc-button-font-size-medium);
 				cursor: pointer;
 				color: var(--sc-color-primary-500);
