Update the price display to be able tow rap

--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -16,7 +16,7 @@
 
 			<!-- wp:group {"style":{"spacing":{"blockGap":"0"}}} -->
 			<div class="wp-block-group">
-				<!-- wp:group {"style":{"spacing":{"blockGap":"0.5em"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left"}} -->
+				<!-- wp:group {"style":{"spacing":{"blockGap":"0.5em"}},"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"}} -->
 				<div class="wp-block-group">
 					<!-- wp:surecart/product-selected-price-scratch-amount {"style":{"typography":{"textDecoration":"line-through","fontSize":"24px"},"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}}} /-->
 
