No text decoration on page numbers

--- a/packages/blocks-next/src/blocks/product-pagination-numbers/style.scss
+++ b/packages/blocks-next/src/blocks/product-pagination-numbers/style.scss
@@ -5,7 +5,7 @@
 		padding: 0.25em;
 		line-height: 1;
 		gap: var(--sc-spacing-xx-small);
-		text-decoration: none;
+		text-decoration: none !important;
 		color: inherit;
 
 		&[disabled] {
