--- a/packages/blocks-next/src/blocks/cart-menu-button/style.scss
+++ b/packages/blocks-next/src/blocks/cart-menu-button/style.scss
@@ -3,14 +3,15 @@
 	display: inline-block;
 	vertical-align: middle;
 	line-height: 1;
+	color: inherit;
 
 	.sc-cart-icon {
 		font-size: var(--sc-cart-icon-size, 1.1em);
 		cursor: pointer;
 
 		svg {
-			width: 18px;
-			height: 18px;
+			width: 20px;
+			height: 20px;
 		}
 	}
 
