--- a/packages/blocks-next/src/styles/label.scss
+++ b/packages/blocks-next/src/styles/label.scss
@@ -3,7 +3,7 @@
 	font-family: var(--sc-font-sans);
 	font-size: var(--sc-font-size-medium);
 	font-weight: var(--sc-font-weight-normal);
-	margin: var(--sc-input-label-margin);
+	margin-bottom: var(--sc-input-label-margin);
 	display: inline-block;
 	color: var(--sc-input-label-color);
 	font-weight: var(--sc-input-label-font-weight);
