Add the button outline to the buy button by default

--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -71,7 +71,7 @@
 			<div class="wp-block-surecart-product-buy-buttons wp-block-buttons sc-block-buttons is-layout-flex">
 				<!-- wp:surecart/product-buy-button {"add_to_cart":true,"text":"Add To Cart"} /-->
 
-				<!-- wp:surecart/product-buy-button {"text":"Buy Now"} /-->
+				<!-- wp:surecart/product-buy-button {"text":"Buy Now","className":"is-style-outline"} /-->
 			</div>
 			<!-- /wp:surecart/product-buy-buttons -->
 		</div>
