--- a/templates/parts/product-info.html
+++ b/templates/parts/product-info.html
@@ -43,8 +43,7 @@
 		<!-- /wp:surecart/product-variant-pills -->
 
 		<!-- wp:surecart/product-price-chooser -->
-		<!-- wp:surecart/product-price-choices-template {"style":{"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"}}},"layout":{"type":"grid","columnCount":2,"justifyContent":"stretch","orientation":"vertical","flexWrap":"nowrap","verticalAlignment":"center"}} -->
-		<!-- wp:surecart/product-price-choice-template {"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"nowrap","orientation":"horizontal"}} -->
+		<!-- wp:surecart/product-price-choice-template {"layout":{"type":"flex","justifyContent":"left","flexWrap":"nowrap","orientation":"horizontal"}} -->
 		<!-- wp:surecart/price-name {"style":{"layout":{"selfStretch":"fixed","flexSize":"50%"},"typography":{"fontStyle":"normal","fontWeight":"600"}}} /-->
 
 		<!-- wp:group {"style":{"spacing":{"blockGap":"0px"},"layout":{"selfStretch":"fixed","flexSize":"50%"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right"}} -->
@@ -57,7 +56,6 @@
 		</div>
 		<!-- /wp:group -->
 		<!-- /wp:surecart/product-price-choice-template -->
-		<!-- /wp:surecart/product-price-choices-template -->
 		<!-- /wp:surecart/product-price-chooser -->
 
 		<!-- wp:surecart/product-quantity /-->
