make the choices be dependent on the columns supplied

--- a/packages/blocks-next/src/blocks/product-price-chooser/style.scss
+++ b/packages/blocks-next/src/blocks/product-price-chooser/style.scss
@@ -8,6 +8,12 @@
 	}
 }
 
+@container product-price-choices (max-width: 768px) {
+	.sc-choices {
+		grid-template-columns: repeat(1, 1fr) !important;
+	}
+}
+
 @container product-price-choices (max-width: 320px) {
 	.wp-block-surecart-product-price-choice-template {
 		flex-direction: column;
