--- a/packages/blocks-next/src/styles/spinner.scss
+++ b/packages/blocks-next/src/styles/spinner.scss
@@ -14,6 +14,10 @@
 	border-top-color: currentColor;
 	border-right-color: currentColor;
 	animation: 1s linear infinite spin;
+
+	&[hidden] {
+		display: none;
+	}
 }
 
 @keyframes spin {
