Add to cart button - remove type and size and fixed editor UI same as frontend

--- a/packages/blocks-next/src/styles/form-control.scss
+++ b/packages/blocks-next/src/styles/form-control.scss
@@ -167,3 +167,10 @@ textarea {
 	font-weight: var(--sc-font-weight-normal);
 	color: var(--sc-input-label-color);
 }
+
+// Form Help Text style.
+.sc-help-text {
+	display: block;
+	font-size: var(--sc-input-help-text-font-size-medium);
+    color: var(--sc-input-help-text-color);
+}
