Removed unncessary css changes

--- a/packages/blocks-next/src/styles/button.scss
+++ b/packages/blocks-next/src/styles/button.scss
@@ -274,9 +274,8 @@
 
 /* Default */
 .sc-button--outline.sc-button--default {
-	border-color: var(--sc-button-default-border-color, var(--sc-color-gray-300));
+	border-color: var(--sc-color-gray-300);
 	color: var(--sc-color-gray-700);
-	background: none;
 }
 .sc-button--outline.sc-button--default:hover:not(.sc-button--disabled) {
 	border-color: var(--primary-background);
@@ -397,7 +396,6 @@
 .sc-button--text {
 	background-color: transparent;
 	border-color: transparent;
-	box-shadow: none;
 	color: inherit;
 
 	&:hover:not(.sc-button--disabled) {
@@ -515,15 +513,15 @@
 }
 
 .sc-button--large {
-	font-size: var(--sc-button-font-size-large) !important;
-	height: var(--sc-input-height-large) !important;
+	font-size: var(--sc-button-font-size-large);
+	height: var(--sc-input-height-large);
 	line-height: calc(
 		var(--sc-input-height-large) - var(--sc-input-border-width) * 2
 	);
 	border-radius: var(
 		--button-border-radius,
 		var(--sc-input-border-radius-large)
-	) !important;
+	);
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
