--- a/packages/blocks-next/src/blocks/product-list-search/styles.scss
+++ b/packages/blocks-next/src/blocks/product-list-search/styles.scss
@@ -1,4 +1,5 @@
-.wp-block-surecart-product-list-search {
+.wp-block-surecart-product-list-search.sc-input-group {
+	width: 250px;
 	min-height: 30px;
 	--sc-border-radius-medium: 0;
 }
