--- a/templates/templates/taxonomy-sc_collection.html
+++ b/templates/templates/taxonomy-sc_collection.html
@@ -17,14 +17,12 @@
 		<div class="wp-block-group"><!-- wp:surecart/product-list-sort /--></div>
 		<!-- /wp:group -->
 
-		<!-- wp:group {"style":{"layout":{"selfStretch":"fixed","flexSize":"250px"}},"layout":{"type":"flex","flexWrap":"nowrap"}} -->
-		<div class="wp-block-group"><!-- wp:surecart/product-list-search /--></div>
-		<!-- /wp:group -->
+		<!-- wp:surecart/product-list-search {"style":{"layout":{"selfStretch":"fixed","flexSize":"250px"}}} /-->
 	</div>
 	<!-- /wp:group -->
 
 	<!-- wp:surecart/product-template {"style":{"spacing":{"blockGap":"30px"}},"layout":{"type":"grid","columnCount":4}} -->
-	<!-- wp:group {"style":{"spacing":{"blockGap":"5px"}},"layout":{"type":"constrained"}} -->
+	<!-- wp:group {"style":{"spacing":{"blockGap":"5px"}},"layout":{"type":"flex","orientation":"vertical"}} -->
 	<div class="wp-block-group">
 		<!-- wp:surecart/product-image {"style":{"spacing":{"margin":{"bottom":"15px"}},"border":{"radius":"6px"}}} /-->
 
