Use query title for collection template header.

--- a/templates/parts/product-collection-part.html
+++ b/templates/parts/product-collection-part.html
@@ -2,7 +2,7 @@
 <div class="wp-block-group alignwide" style="margin-top:40px;margin-bottom:40px">
 	<!-- wp:group {"align":"wide","style":{"spacing":{"blockGap":"1em"}},"layout":{"type":"constrained","justifyContent":"left","contentSize":"550px"}} -->
 	<div class="wp-block-group alignwide">
-		<!-- wp:post-title {"level":1,"align":"wide","style":{"typography":{"lineHeight":"1.2"}}} /-->
+		<!-- wp:query-title {"type":"archive","level":2,"showPrefix":false,"align":"wide"} /-->
 
 		<!-- wp:term-description /-->
 	</div>
