Remove constrained layout from templates

--- a/templates/parts/product-info.html
+++ b/templates/parts/product-info.html
@@ -11,7 +11,7 @@
 
 		<!-- wp:surecart/product-title /-->
 
-		<!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"constrained"}} -->
+		<!-- wp:group {"style":{"spacing":{"blockGap":"0"}}} -->
 		<div class="wp-block-group">
 			<!-- wp:group {"style":{"spacing":{"blockGap":"0.5em"}},"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left","verticalAlignment":"bottom"}} -->
 			<div class="wp-block-group">
