--- a/templates/templates/taxonomy-sc_collection.html
+++ b/templates/templates/taxonomy-sc_collection.html
@@ -24,7 +24,7 @@
 	<!-- /wp:group -->
 
 	<!-- wp:surecart/product-template {"style":{"spacing":{"blockGap":"30px"}},"layout":{"type":"grid","columnCount":4}} -->
-	<!-- wp:group {"style":{"spacing":{"blockGap":"5px"}},"layout":{"type":"constrained"}} -->
+	<!-- wp:group {"style":{"spacing":{"blockGap":"5px"}}} -->
 	<div class="wp-block-group">
 		<!-- wp:surecart/product-image {"style":{"spacing":{"margin":{"bottom":"15px"}},"border":{"radius":"6px"}}} /-->
 
