remove the row spacing and set it so that it comes from the columns

--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -7,7 +7,7 @@
 		<div class="wp-block-column"><!-- wp:surecart/product-media /--></div>
 		<!-- /wp:column -->
 
-		<!-- wp:column {"width":"36%"} -->
+		<!-- wp:column {"width":"36%","style":{"spacing":{"blockGap":"0.75em"}}} -->
 		<div class="wp-block-column" style="flex-basis:36%"><!-- wp:surecart/product-collection-tags -->
 			<!-- wp:surecart/product-collection-tag /-->
 			<!-- /wp:surecart/product-collection-tags -->
