Handle hover effect.

--- a/packages/blocks-next/src/styles/product-line-item.scss
+++ b/packages/blocks-next/src/styles/product-line-item.scss
@@ -68,6 +68,11 @@
 		text-overflow: ellipsis;
 		text-decoration: none;
 		color: inherit;
+
+		&:hover {
+			text-decoration: none;
+			color: inherit;
+		}
 	}
 
 	&__variant {
