--- a/packages/blocks-next/src/blocks/product-price-choice-template/style.scss
+++ b/packages/blocks-next/src/blocks/product-price-choice-template/style.scss
@@ -1,7 +1,13 @@
 .wp-block-surecart-product-price-choice-template {
 	container-type: inline-size;
 	container-name: product-price-choice-template;
+
 	.wp-block-group.is-vertical.is-content-justification-right {
 		text-align: right;
+	}
+
+	// this is needed for some page builders.
+	&.is-layout-flex {
+		display: flex;
 	}
 }
