Enforce border box styling for thrive architect

--- a/packages/blocks-next/src/styles/choice.scss
+++ b/packages/blocks-next/src/styles/choice.scss
@@ -226,3 +226,8 @@
 		display: block;
 	}
 }
+
+// Thrive architect compatibility
+.thrv_wrapper div.sc-choices {
+  box-sizing: border-box !important;
+}
