--- a/packages/blocks-next/src/blocks/product-collection-tags/style.scss
+++ b/packages/blocks-next/src/blocks/product-collection-tags/style.scss
@@ -1,4 +1,5 @@
 ul.wp-block-surecart-product-collection-tags {
+	display: flex;
 	gap: 3px;
 	width: 100%; // prevent collapsing during loading.
 	list-style: none;
