Start list patterns

--- a/packages/blocks-next/src/blocks/product-template/style.scss
+++ b/packages/blocks-next/src/blocks/product-template/style.scss
@@ -25,7 +25,8 @@
 	}
 }
 
-a.sc-product-item-link {
+a.sc-product-item-link,
+.sc-product-item-link {
 	box-sizing: border-box;
 	display: block;
 	height: 100%;
