Add anchor and make the width of the link to always occupy the width of the container

--- a/packages/blocks-next/src/styles/wp-button.scss
+++ b/packages/blocks-next/src/styles/wp-button.scss
@@ -29,6 +29,9 @@
 		text-transform: inherit !important;
 	}
 }
+.wp-block-button__link {
+	width: 100%;
+}
 
 .sc-button__link {
 	position: relative;
