SUR-1318 - Fix: Product Title Alignment not working when template is inside stack.

--- a/packages/blocks-next/src/blocks/product-title/style.scss
+++ b/packages/blocks-next/src/blocks/product-title/style.scss
@@ -1,4 +1,5 @@
-.wp-block-surecart-product-list-title {
+.wp-block-surecart-product-title {
+	width: 100%;
 	margin: 0;
 	a {
 		text-decoration: none;
