make the default styling for wp-button not depend that it is wrapped around buttons

--- a/packages/blocks-next/src/styles/wp-button.scss
+++ b/packages/blocks-next/src/styles/wp-button.scss
@@ -1,22 +1,10 @@
-.wp-block-buttons .wp-block-button {
+.wp-block-button {
 	width: 100%;
 
 	&.is-style-outline {
-		button.wp-block-button__link.wp-element-button:not(
-				.has-background,
-				:hover,
-				:focus
-			),
-		div.wp-block-button__link.wp-element-button:not(
-				.has-background,
-				:hover,
-				:focus
-			),
-		a.wp-block-button__link.wp-element-button:not(
-				.has-background,
-				:hover,
-				:focus
-			) {
+		button.wp-block-button__link.wp-element-button:not(.has-background, :hover, :focus),
+		div.wp-block-button__link.wp-element-button:not(.has-background, :hover, :focus),
+		a.wp-block-button__link.wp-element-button:not(.has-background, :hover, :focus) {
 			background-color: transparent;
 			background-image: none;
 		}
