--- a/packages/blocks-next/src/styles/choice.scss
+++ b/packages/blocks-next/src/styles/choice.scss
@@ -3,6 +3,7 @@
 	gap: var(--sc-choices-gap, 10px);
 	grid-template-columns: repeat(var(--columns, 1), 1fr);
 	grid-auto-rows: 1fr;
+	box-sizing: border-box;
 
 	> * {
 		height: 100%;
@@ -226,12 +227,7 @@
 	}
 }
 
-// Thrive architect compatibility
-.thrv_wrapper div.sc-choices {
-  box-sizing: border-box !important;
-}
-
 .wp-block.sc-choice {
-  margin-top: 0;
-  margin-bottom: 0;
+	margin-top: 0;
+	margin-bottom: 0;
 }
