Don't inline style product tag

--- a/packages/components/src/components/ui/tag/sc-tag.scss
+++ b/packages/components/src/components/ui/tag/sc-tag.scss
@@ -10,6 +10,7 @@
   white-space: nowrap;
   user-select: none;
   cursor: pointer;
+  text-decoration: none;
   font-weight: var(--sc-font-weight-bold);
 }
 
