Make default width 100%

--- a/packages/blocks-next/src/blocks/product-selected-price-ad-hoc-amount/style.scss
+++ b/packages/blocks-next/src/blocks/product-selected-price-ad-hoc-amount/style.scss
@@ -1,5 +1,6 @@
 .wp-block-surecart-product-selected-price-ad-hoc-amount {
 	margin-bottom: var(--sc-form-row-spacing, 0.75em);
+	width: 100%;
 
 	.sc-form-label {
 		color: inherit !important;
