Provide better way to set the highlight border and highlight text for the variant pills

--- a/packages/blocks-next/src/styles/pill.scss
+++ b/packages/blocks-next/src/styles/pill.scss
@@ -62,13 +62,13 @@ a.sc-pill-option__button,
 		background-color: var(
 			--sc-pill-option-active-background-color,
 			var(--sc-color-primary-500)
-		) !important;
+		);
 		border-color: var(
 			--sc-pill-option-active-background-color,
 			var(--sc-color-primary-500)
-		) !important;
-		color: var(--sc-pill-option-active-text-color, white) !important;
-		box-shadow: var(--sc-shadow-small) !important;
+		);
+		color: var(--sc-pill-option-active-text-color, white);
+		box-shadow: var(--sc-shadow-small);
 	}
 
 	&:focus-visible {
