--- a/packages/components/src/components/controllers/checkout-form/invoice-number/sc-line-item-invoice-number.scss
+++ b/packages/components/src/components/controllers/checkout-form/invoice-number/sc-line-item-invoice-number.scss
@@ -7,8 +7,5 @@ sc-line-item {
   font-size: var(--sc-font-size-small);
   line-height: var(--sc-line-height-dense);
   color: var(--sc-input-label-color);
-}
-
-sc-line-item::part(base) {
-  grid-template-columns: max-content auto auto;
+  margin-bottom: var(--sc-spacing-small);
 }
