Invoice receipt download component to support dummy editing

--- a/packages/components/src/components/controllers/checkout-form/invoice-receipt-download/sc-line-item-invoice-receipt-download.scss
+++ b/packages/components/src/components/controllers/checkout-form/invoice-receipt-download/sc-line-item-invoice-receipt-download.scss
@@ -7,10 +7,7 @@ sc-line-item {
   font-size: var(--sc-font-size-small);
   line-height: var(--sc-line-height-dense);
   color: var(--sc-input-label-color);
-}
-
-sc-line-item::part(base) {
-  grid-template-columns: max-content auto auto;
+  margin-bottom: var(--sc-spacing-small);
 }
 
 sc-icon {
