--- a/templates/parts/product-collection-part.html
+++ b/templates/parts/product-collection-part.html
@@ -31,7 +31,7 @@
 	</div>
 	<!-- /wp:group -->
 
-	<!-- wp:surecart/product-template {"style":{"spacing":{"blockGap":"2rem"}},"layout":{"type":"grid","columnCount":null,"minimumColumnWidth":"224px"}} -->
+	<!-- wp:surecart/product-template {"style":{"spacing":{"blockGap":"36px"}},"layout":{"type":"grid","columnCount":null,"minimumColumnWidth":"224px"}} -->
 	<!-- wp:group {"layout":{"type":"default"}} -->
 	<div class="wp-block-group">
 		<!-- wp:group {"style":{"color":{"background":"#0000000d"},"border":{"radius":"10px"},"spacing":{"padding":{"top":"0px","bottom":"0px"}}},"layout":{"type":"default"}} -->
